--- a/adding.html
+++ b/adding.html
@@ -11,6 +11,8 @@
 </CENTER>
 
 <HR>
+    If you want to know more, click here.
+    <a href="info.html">About Us</a> 
 
 <H1>This is a Header</H1>
 
@@ -21,6 +23,7 @@
 <P><B>This is a new paragraph!</B>
 
 <BR><B><I> This is a new sentence without a paragraph break, in bold italics</I></B>
+<BR><B><U> This is a new sentence without a paragraph break, in bold underline</U></B>
 
 <HR>
 
